# jezyki-skryptowe

./: README.md
lista1/: Untitled.ipynb  app.py  triangle.py
lista1/wiki/: pyproject.toml
lista1/wiki/wiki/: __main__.py  wiki.py
