[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "python3 -m wiki"


[tool.poetry.dependencies]
python = "^3.9"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
